# comprehensive-network-scanner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  GITHUB_SETUP.md  KALI_INSTALL.md  KALI_TROUBLESHOOTING.md  LICENSE  MANIFEST.in  README.md  SLICE2_TEST_REPORT.md  TEST_RESULTS.md  analyze_results.py  fix_kali_system.sh  install.bat  install.sh  install_kali.sh  netscan_kali_install.sh  pyproject.toml  requirements.txt  setup.py  test_kali_install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py
app/api/: server.py
app/core/: cli.py  db.py
app/report/: generator.py  normalize.py
app/scans/: __init__.py  baseline.py  nuclei_safe.py  recon.py  tls.py  web_fp.py
app/ui/templates/: index.html  report.html
app/utils/: __init__.py  nessus_import.py  nmap_parse.py  progress.py  zap_import.py
