[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netscan"
version = "1.0.0"
description = "A comprehensive network penetration testing tool"
authors = [
    {name = "Wasif Amin", email = "wasif.amin@example.com"},
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["penetration-testing", "network-security", "vulnerability-scanning"]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "sqlalchemy>=2.0.0",
    "python-nmap>=0.7.1",
    "requests>=2.31.0",
    "sslyze>=6.0.0",
    "weasyprint>=60.0",
    "reportlab>=4.0.0",
    "python-dateutil>=2.8.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
netscan = "app.core.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]